<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="com.digitcreativestudio.auditmobil.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/nomor_polisi_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nomor_polisi"
            style="@style/editTextStyle"/>
        <EditText
            android:id="@+id/pengelola_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pengelola"
            style="@style/editTextStyle"/>
        <EditText
            android:id="@+id/tgl_pemeriksaan_terakhir_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tgl_pemeriksaan_terakhir"
            style="@style/editTextStyle"/>
        <EditText
            android:id="@+id/tgl_pemeriksaan_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tgl_pemeriksaan"
            style="@style/editTextStyle"/>
        <EditText
            android:id="@+id/merek_mobil_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_merek_mobil"
            style="@style/editTextStyle"/>
        <EditText
            android:id="@+id/jenis_produk_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_jenis_produk"
            style="@style/editTextStyle"/>
        <EditText
            android:id="@+id/kapasitas_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_kapasitas"
            style="@style/editTextStyle"/>
        <EditText
            android:id="@+id/lokasi_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lokasi"
            style="@style/editTextStyle"/>
        <Button
            android:id="@+id/periksa_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_periksa"
            style="@style/buttonStyleAccent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:onClick="postCar"/>
    </LinearLayout>

</ScrollView>
