<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@color/colorGrey"
    tools:context="com.digitcreativestudio.auditmobil.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_knalpot"
            style="@style/title_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/itemCekStyle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">
                <CheckBox
                    android:id="@+id/check_bent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_knalpot_1"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_bent"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />
                <ImageView
                    android:id="@+id/image_bent_add"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>
                <TextView
                    android:id="@+id/text_bent_change_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_image"
                    style="@style/textChangeImage"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/edit_bent_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ket"
                style="@style/editTextStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/itemCekStyle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">
                <CheckBox
                    android:id="@+id/check_standard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_knalpot_2" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_standard"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />
                <ImageView
                    android:id="@+id/image_standard_add"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>
                <TextView
                    android:id="@+id/text_standard_change_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_image"
                    style="@style/textChangeImage"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/edit_standard_emission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_uji_emisi"
                style="@style/editTextStyle"/>
            <EditText
                android:id="@+id/edit_standard_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ket"
                style="@style/editTextStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
