<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@color/colorGrey"
    tools:context="com.digitcreativestudio.auditmobil.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_kemudi"
            style="@style/title_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/itemCekStyle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">
                <CheckBox
                    android:id="@+id/check_steer_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_kemudi_1" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_steer_max"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />
                <ImageView
                    android:id="@+id/image_steer_max_add"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>
                <TextView
                    android:id="@+id/text_steer_max_change_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_image"
                    style="@style/textChangeImage"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/edit_steer_max_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ket"
                style="@style/editTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/itemCekStyle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">
                <CheckBox
                    android:id="@+id/check_easy_steer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_kemudi_2"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_easy_steer"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />
                <ImageView
                    android:id="@+id/image_easy_steer_add"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>
                <TextView
                    android:id="@+id/text_easy_steer_change_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_image"
                    style="@style/textChangeImage"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/edit_easy_steer_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ket"
                style="@style/editTextStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
